--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set(TOOL_TARGET_SOURCE "YourProjectName.tar.gz")
 set(TOOL_TARGET_DIR "YourProjectName")
 set(TOOL_TARGET_PATCH "YourProjectName.patch")
 set(TOOL_TARGET_BASE_URL "http://URL_PREFIX_FOR_YourProjectName")
+set(TOOL_TARGET_INSTALL_PREFIX ${CMAKE_BINARY_DIR})
 set(CONFIG_ADD_OPTIONS "")
 	if(DEFINED CMAKE_TOOLCHAIN_FILE)
 		add_custom_command(
@@ -40,7 +41,7 @@ set(CONFIG_ADD_OPTIONS "")
 			COMMAND test -e ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_SOURCE} || wget ${TOOL_TARGET_BASE_URL}/${TOOL_TARGET_SOURCE} -O ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_SOURCE}
 			COMMAND tar -xzvf ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_SOURCE}
 			COMMAND test -e ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_PATCH} && cd ${TOOL_TARGET_DIR} && patch -p1 < ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_PATCH} && echo "use patch file: ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_PATCH}" || echo "no patch file"
-			COMMAND cd ${TOOL_TARGET_DIR} && ${target_platform_preconfigure_options} ./configure --host="${target_platform}" --prefix=/opt/arm6 LDFLAGS="${SELF_LDFLAGS}" CPPFLAGS="${SELF_CPPFLAGS}" ${CONFIG_ADD_OPTIONS}
+			COMMAND cd ${TOOL_TARGET_DIR} && ${target_platform_preconfigure_options} ./configure --host="${target_platform}" --prefix=${TOOL_TARGET_INSTALL_PREFIX} LDFLAGS="${SELF_LDFLAGS}" CPPFLAGS="${SELF_CPPFLAGS}" ${CONFIG_ADD_OPTIONS}
 			COMMAND cd ${TOOL_TARGET_DIR} && make -j2 && make install
 			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 			COMMENT ${TOOL_TARGET_COMMENT}
@@ -51,7 +52,7 @@ set(CONFIG_ADD_OPTIONS "")
 			COMMAND test -e ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_SOURCE} || wget ${TOOL_TARGET_BASE_URL}/${TOOL_TARGET_SOURCE} -O ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_SOURCE}
 			COMMAND tar -xzvf ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_SOURCE}
 			COMMAND test -e ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_PATCH} && cd ${TOOL_TARGET_DIR} && patch -p1 < ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_PATCH} && echo "use patch file: ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_TARGET_PATCH}" || echo "no patch file"
-			COMMAND cd ${TOOL_TARGET_DIR} && ${target_platform_preconfigure_options} ./configure --prefix=${CMAKE_BINARY_DIR} LDFLAGS="${SELF_LDFLAGS}" CPPFLAGS="${SELF_CPPFLAGS}" ${CONFIG_ADD_OPTIONS}
+			COMMAND cd ${TOOL_TARGET_DIR} && ${target_platform_preconfigure_options} ./configure --prefix=${TOOL_TARGET_INSTALL_PREFIX} LDFLAGS="${SELF_LDFLAGS}" CPPFLAGS="${SELF_CPPFLAGS}" ${CONFIG_ADD_OPTIONS}
 			COMMAND cd ${TOOL_TARGET_DIR} && make -j2 && make install
 			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 			COMMENT ${TOOL_TARGET_COMMENT}
